--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
             "name": "Flutter",
             "request": "launch",
             "type": "dart",
-           // "args": ["--enable-software-rendering", "-d", "all"]
+            "args": ["--enable-software-rendering", "-d", "all"]
         }
     ]
 }
